# cppcmake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  design_doc.drawio  library.cpp  library.h
.circleci/: config.yml
CppCmake/: build.cpp  build.hpp
CppCmake/CppCmake/: backend.cpp  backend.hpp  build.cc  build.cpp  eval_env.h  graph_generator.cpp  graph_generator.hpp  manifest_parser.cc  manifest_parser_perftest.cc  parser.cc  parser.h  util_funcs.cpp  util_funcs.hpp  util_funcs.in.cpp  version.cc
CppCmake/upgrade/: eval_string_factory.cc  eval_string_factory.h
docs/: README.md
src/: cppcmake.cc  cppcmake_backend.cpp  cppcmake_backend.hpp  cppcmake_utils.cpp  cppcmake_utils.hpp
standalone/: cppcmake.cc
standalone/test/: .cppcmake_deps  .cppcmake_log  hello
standalone/test/include/: add.h  hello.h
standalone/test/src/: add.cpp  hello.cpp  main.cpp
test/: .cppcmake_log  .gitignore  .ninja_log  build.ninja  hello  helloworld  helloworld.cpp
test/include/: hello.h
test/src/: hello.cpp  main.cpp
unit_tests/: test_make.cpp
